# ai-skills

./: .gitignore  .scratch-depth2-rename.json  .scratch-rename-map.json  CLAUDE.md  CONTEXT.md  README.md  catalog.yaml  skills-lock.json
warehouse/developer-kit/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_CN.md  README_ES.md  README_IT.md  context7.json  pyproject.toml  tessl.json  tile.json
warehouse/developer-kit/.claude-plugin/: marketplace.json
warehouse/developer-kit/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
warehouse/developer-kit/.github/workflows/: plugin-validation.yml  publish-tiles.yml  security-scan.yml  skill-review.yml
warehouse/developer-kit/.skills-validator-check/: install-hooks.sh  mcp-scan-allowlist.json  pre-commit.py  readme.md
warehouse/developer-kit/.skills-validator-check/claude_validator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
warehouse/developer-kit/.skills-validator-check/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_models.py  test_validators.py
warehouse/developer-kit/.skills-validator-check/validators/: __init__.py  cli.py  config.py  mcp_scan_checker.py  models.py  reporter.py  security_checker.py  validators.py
warehouse/developer-kit/docs/: README.md
warehouse/developer-kit/examples/: AGENTS.md
warehouse/developer-kit/plugins/developer-kit-ai/: README.md
warehouse/developer-kit/plugins/developer-kit-aws/: README.md
warehouse/developer-kit/plugins/developer-kit-core/: README.md
warehouse/developer-kit/plugins/developer-kit-devops/: README.md
warehouse/developer-kit/plugins/developer-kit-java/: .lsp.json  README.md
warehouse/developer-kit/plugins/developer-kit-php/: .lsp.json  README.md
warehouse/developer-kit/plugins/developer-kit-project-management/: README.md
warehouse/developer-kit/plugins/developer-kit-python/: .lsp.json  README.md
warehouse/developer-kit/plugins/developer-kit-specs/: README.md
warehouse/developer-kit/scripts/: agents_loop.py  bump_plugin_versions.py  install-claude.sh  install-rules.sh
(+1670 files in other folders)
